# ibkr-mcp-server

./: Dockerfile  PROJECT_STATUS.md  README.md  README_zh_CN.md  docker-compose.yml  env.example  pyproject.toml
examples/: basic_usage.py
ibkr-mcp-server-rust/: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  docker-compose.yml  docker-run.sh  test_mcp_protocol.sh  test_tools.sh
ibkr-mcp-server-rust/.github/workflows/: ci.yml
ibkr-mcp-server-rust/src/: error.rs  lib.rs  main.rs  utils.rs
ibkr-mcp-server-rust/src/config/: mod.rs  settings.rs
ibkr-mcp-server-rust/src/ibkr/: client.rs  connection.rs  mod.rs
ibkr-mcp-server-rust/src/mcp/: handler.rs  mod.rs  server.rs  tools.rs
ibkr-mcp-server-rust/src/models/: contract.rs  market_data.rs  mod.rs  order.rs  position.rs  response.rs
ibkr-mcp-server-rust/tests/: integration_tests.rs
src/ibkr_mcp_server/: cli.py  client.py  config.py  server.py
